<resources>
    <string name="app_name">Gopher Calendar</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Full Name</string>>
    <string name="prompt_email">Your email id ending with @umn.edu</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_x500">x500</string>
    <string name="action_sign_in">Already a member? Login</string>
    <string name="action_register">Not a member yet? Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="password_confirm">Repeat your password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_field_required">This field is required</string>

    <!-- Account type -->
    <string name="check_box_student">Look For Event</string>
    <string name="check_box_host">Be A Host</string>
    <string name="button_continue">Continue</string>

    <!-- Event tags -->
    <string name="check_music">Music</string>
    <string name="check_movie">Movie</string>
    <string name="check_Game">Game</string>
    <string name="check_Sport">Sport</string>
    <string name="check_Career">Career</string>
    <string name="check_food">Free Food</string>
    <string name="check_recreation">Recreation</string>
    <string name="check_late_night">Late Night</string>
    <string name="check_talk">Talk</string>

    <!-- popup window message -->
    <string name="popup_welcome">Welcome! \n Please select your event interest.</string>
    <string name="pop_button_welcome">Got it</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_event_view">EventViewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="cancel_rsvp_header">Are you sure you want to cancel your RSVP?</string>
    <string name="cancel_rsvp_body">This event will be removed from your events, and you will no longer receive updates for this event.</string>
    <string-array name="filters_list">
        <item>Select Category</item>
        <item>Academics</item>
        <item>Sports</item>
        <item>Music</item>
        <item>Movie</item>
        <item>Art</item>
        <item>Recreation</item>
        <item>Social</item>

    </string-array>
    <string name="search_hint">Search for events..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--NAVIGATION STRINGS-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_tabs">TabFragment</string>
    <string name="navigation_drawer_thirdFrag">ThirdFragment</string>
    <string name="navigation_drawer_settings">Settings</string>

    <string name="navigation_drawer_friends">Friends</string>
    <string name="navigation_drawer_profile">Profile</string>
    <string name="navigation_drawer_event_view">Event View</string>
    <string name="navigation_drawer_notifications">Notifications</string>
    <string name="navigation_drawer_logout">Logout</string>

    <string-array name="array_events">
        <item>Spring Fest</item>
        <item>Coffee Hour</item>
        <item>Movie Night</item>
    </string-array>

    <string name="search">Search</string>
    <string name="search_friends">Search Friends</string>
    <string name="find_friends">Find Friends</string>
</resources>
