<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
    <group
        android:id="@+id/nav_group_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/event_view"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/navigation_drawer_event_view"
            android:checked="true"/>

        <item
            android:id="@+id/profile"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/navigation_drawer_profile" />

        <item
            android:id="@+id/friends"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/navigation_drawer_friends" />


        <item
            android:id="@+id/notifications"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/navigation_drawer_notifications" />

    </group>


</menu>
