<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:baselineAligned="false"
    android:fitsSystemWindows="false"
    android:gravity="center"
    android:orientation="vertical">


    <CheckBox
        android:id="@+id/checkBox_student"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_margin="@android:dimen/app_icon_size"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/check_box_student"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/checkBox_host"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_margin="@android:dimen/app_icon_size"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/check_box_host"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/button_continue" />

</LinearLayout>