<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/windowBackground"
    >

    <!-- SIGN IN SETUP-->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingTop="26dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="@color/white"
        >
        <!-- TODO: Add LOGO here-->


        <!-- EMAIL SETUP-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <!-- Passworo setup-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColorLink="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!--login button-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/action_sign_in_short" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:onClick="itemClicked"
            android:text="@string/action_register"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>