<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="umn.umncalendar.UserInterest"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <CheckBox
        android:id="@+id/checkbox_music"
        android:layout_width="397dp"
        android:layout_height="31dp"
        android:hint="@string/check_music"
        android:textSize="25sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_editor_absoluteY="214dp"
        tools:layout_editor_absoluteX="7dp"/>

    <CheckBox
        android:id="@+id/checkbox_movie"
        android:layout_width="397dp"
        android:layout_height="32dp"
        android:hint="@string/check_movie"
        android:textSize="25sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_editor_absoluteY="258dp"
        tools:layout_editor_absoluteX="7dp"/>

    <CheckBox
        android:id="@+id/checkbox_food"
        android:layout_width="396dp"
        android:layout_height="31dp"
        android:hint="Free Food"
        android:textSize="25sp"
        tools:layout_editor_absoluteY="305dp"
        tools:layout_editor_absoluteX="7dp"/>

    <CheckBox
        android:id="@+id/checkbox_sport"
        android:layout_width="397dp"
        android:layout_height="31dp"
        android:hint="@string/check_Sport"
        android:textSize="25sp"
        tools:layout_editor_absoluteY="353dp"
        tools:layout_editor_absoluteX="7dp"/>

    <CheckBox
        android:id="@+id/checkbox_career"
        android:layout_width="397dp"
        android:layout_height="34dp"
        android:hint="Academics"
        android:textSize="25sp"
        tools:layout_editor_absoluteY="398dp"
        tools:layout_editor_absoluteX="7dp"/>
    <CheckBox
        android:id="@+id/checkbox_culture"
        android:layout_width="396dp"
        android:layout_height="0dp"
        android:hint="Social"
        android:textSize="25sp"
        tools:layout_editor_absoluteY="169dp"
        tools:layout_editor_absoluteX="7dp"/>

    <CheckBox
        android:id="@+id/checkbox_photo"
        android:layout_width="396dp"
        android:layout_height="0dp"
        android:hint="Photography"
        android:textSize="25sp"
        tools:layout_editor_absoluteY="125dp"
        tools:layout_editor_absoluteX="7dp"/>

    <CheckBox
        android:id="@+id/checkbox_recreation"
        android:layout_width="396dp"
        android:layout_height="32dp"
        android:hint="@string/check_recreation"
        android:textSize="25sp"
        tools:layout_editor_absoluteY="448dp"
        tools:layout_editor_absoluteX="7dp"/>

    <Button
        android:id="@+id/continue_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/button_continue"
        tools:layout_editor_absoluteY="509dp"
        tools:layout_editor_absoluteX="161dp"/>

    <TextView
        android:id="@+id/text_welcome_message"
        android:layout_width="363dp"
        android:layout_height="27dp"
        android:text="Please Select Your Event Interest Here"
        tools:layout_editor_absoluteY="79dp"
        tools:layout_editor_absoluteX="24dp"/>

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="67dp"
        android:layout_height="26dp"
        android:text="Welcome"
        tools:layout_editor_absoluteY="46dp"
        tools:layout_editor_absoluteX="24dp"/>

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="91dp"
        android:layout_height="26dp"
        android:text="TextView"
        tools:layout_editor_absoluteY="46dp"
        tools:layout_editor_absoluteX="91dp"/>

</android.support.constraint.ConstraintLayout>
